welcome.lessons.welcome.array.array667.Array667.scala.error
array667:9: error: ';' expected but ',' found.
  return count66 , count67
                 ^